# Programming-Language

./: README.md  dune
10th/: dune  hw10.ml  hw10_test.ml  store.ml
11th/: dune  hw11.ml  hw11_test.ml  store.ml
12th/: hw12_shared_test.ml
13th/: LocalTEnv.ml  dune  env.ml  fstore.ml  hw13.ml  hw13_tc.ml  hw13_test.ml  mem.ml  value.ml
14th/: hw14_shared_test.ml
1st/: dune  hw1.ml
2nd/: dune  hw2.ml
3rd/: dune  hw3.ml
4th/: dune  hw4.ml
5th/: Hw5.ml  dune  hw5_test.ml  store.ml
6th/: dune  fstore.ml  hw6.ml  store.ml  test.ml
9th/: dune  hw9.ml  hw9_test.ml  store.ml
