(include_subdirs unqualified)

(library
(name ast)
(modules ast))

(library
(name parserMain)
(modules parserMain parser lexer)
(libraries ast))

(library
(name store)
(modules store)
(libraries ast))

(library
(name hw9)
(modules hw9)
(libraries ast store)
(instrumentation (backend bisect_ppx))
)

(library
 (name hw9_test)
 (modules hw9_test)
 (libraries hw9 parserMain store ast)
 (preprocess (pps ppx_inline_test))
 (inline_tests))